🔨 add script permission

--- a/action.yaml
+++ b/action.yaml
@@ -16,5 +16,7 @@ inputs:
 runs:
   using: composite
   steps:
+    - run: chmod -x $GITHUB_ACTION_PATH/publish.sh ${{inputs.creditionals}}
+      shell: bash
     - run: $GITHUB_ACTION_PATH/publish.sh ${{inputs.creditionals}}
       shell: bash
