--- a/action.yaml
+++ b/action.yaml
@@ -9,10 +9,11 @@ inputs:
   creditionals:
     required: true
     description: Creditionals for pub.dev site to deploy the package.
-  # package_path:
-  #   default: .
-  #   required: false
-  #   description: Path to the package.
+  package_path:
+    default: .
+    required: false
+    description: Path to the package.
+
 runs:
   using: composite
   steps:
