added missing argument

--- a/action.yaml
+++ b/action.yaml
@@ -9,6 +9,7 @@ inputs:
   creditionals:
     required: true
     description: Creditionals for pub.dev site to deploy the package.
+
   package_path:
     default: .
     required: false
@@ -18,5 +19,5 @@ runs:
   using: composite
   steps:
     - run: >
-        $GITHUB_ACTION_PATH/publish.sh '${{inputs.creditionals}}'
+        $GITHUB_ACTION_PATH/publish.sh '${{inputs.creditionals}}' '${{inputs.package_path}}'
       shell: bash
